--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <script src="index.js"></script>
-
-    <h1>Hello World!</h1>
+    
+    <div id="top_banner"></div>
   </body>
 </html>
