--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <script src="index.js"></script>
-    
-    <div id="top_banner"></div>
+    <div id="top_banner">
+      <div id="top_banner"> </div>
+    </div>
   </body>
 </html>
