--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <script src="index.js"></script>
-    <div id="top_banner">
+    <div id="main_UI">
       <div id="top_banner"> </div>
     </div>
   </body>
