--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <script src="index.js"></script>
-    <div id="main_UI">
-      <div id="top_banner"> </div>
+    <div id="main_UI"> 1
+      <div id="top_banner"> 2</div>
     </div>
   </body>
 </html>
