--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
   <body>
     <script src="index.js"></script>
     <div id="main_UI"> 
-      Hello
+      <diV id='top_nav'> 
+        <h2 id="greeting"> Good Morning William! </h1>  
+      </div>
+      <diV id='block_one'>
+        <div id='block_one_left'> DAILY LOG </div>
+      </div>
     </div>
   </body>
 </html>
