--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
         <h2 id="greeting"> Good Morning William! </h1>  
       </div>
       <diV id='block_one'>
-        <div id='block_one_left'> DAILY LOG </div>
+        <div id='block_one-left'> 
+          <h3>DAILY LOG</h3>
+          <h4 class='daily_quote'> See, I am doing a new thing! Now it      springs up; do you not perceive it? I am making a way in the wilderness and streams in the wasteland.
+            <br><br>
+        <h5 class='daily_quote-ref'> Isaiah 43:19 </h5>
+        </div>
+        <div id='block_one-right'>  </div>
       </div>
     </div>
   </body>
