--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         </div>
         <div id='block_one-right'>  </div>
       </div>
+      <diV id='block_two'>
+      </div>  
     </div>
   </body>
 </html>
