--- a/index.html
+++ b/index.html
@@ -20,7 +20,19 @@
             <br><br>
         <h5 class='daily_quote-ref'> Isaiah 43:19 </h5>
         </div>
-        <div id='block_one-right'>  </div>
+        <div id='block_one-right'>
+        <ul class="daily_list">
+          <li class="mb"><input class="me" type="checkbox"> Brush AM </li>
+          <li class="mb"><input class="me" type="checkbox"> Prayer and VOD </li>
+          <li class="mb"><input class="me" type="checkbox"> Water + Creatine </li>
+          <li class="mb"><input class="me" type="checkbox"> Vitamins (AM) </li>  
+          <li class="mb"><input class="me" type="checkbox"> M1 (25g protein) </li>
+          <li class="mb"><input class="me" type="checkbox"> Beard Oil </li>
+          <li class="mb"><input class="me" type="checkbox"> Clean Room </li>
+          <li class="mb"><input class="me" type="checkbox"> Invest 5$ </li>
+          <li class="mb"><input class="me" type="checkbox"> Brush PM </li>
+          <li class="mb"><input class="me" type="checkbox"> Vitamins (PM) </li>
+        </div>
       </div>
       <diV id='block_two'>
       </div>  
