--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <br><br>
         <h5 class='daily_quote-ref'> Isaiah 43:19 </h5>
         </div>
-        <div id='block_one-right'>
-        <ul class="daily_list">
+        <div id='block_one-right'> 
+        <ul class="daily_list">   
           <li class="mb"><input class="me" type="checkbox"> Brush AM </li>
           <li class="mb"><input class="me" type="checkbox"> Prayer and VOD </li>
           <li class="mb"><input class="me" type="checkbox"> Water + Creatine </li>
@@ -31,6 +31,7 @@
           <li class="mb"><input class="me" type="checkbox"> Clean Room </li>
           <li class="mb"><input class="me" type="checkbox"> Invest 5$ </li>
           <li class="mb"><input class="me" type="checkbox"> Brush PM </li>
+          <li class="mb"><input class="me" type="checkbox"> Mnx. </li>
           <li class="mb"><input class="me" type="checkbox"> Vitamins (PM) </li>
         </div>
       </div>
