--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
           <li class="mb"><input class="me" type="checkbox"> Prayer and VOD </li>
           <li class="mb"><input class="me" type="checkbox"> Water + Creatine </li>
           <li class="mb"><input class="me" type="checkbox"> Vitamins (AM) </li>  
-          <li class="mb"><input class="me" type="checkbox"> M1 (25g protein) </li>
+          <li class="mb"><input class="me" type="checkbox"> 175g protein </li>
           <li class="mb"><input class="me" type="checkbox"> Beard Oil </li>
-          <li class="mb"><input class="me" type="checkbox"> Clean Room </li>
+          <li class="mb"><input class="me" type="checkbox"> Gym + Sauna </li>
           <li class="mb"><input class="me" type="checkbox"> Invest 5$ </li>
           <li class="mb"><input class="me" type="checkbox"> Brush PM </li>
           <li class="mb"><input class="me" type="checkbox"> Mnx. </li>
