--- a/index.html
+++ b/index.html
@@ -35,7 +35,28 @@
           <li class="mb"><input class="me" type="checkbox"> Vitamins (PM) </li>
         </div>
       </div>
-      <diV id='block_two'>
+      <div id='block_two'>
+        <diV id='block_two-left'>
+          <div id=daily_journal>
+            <h6>DAILY ENTRY</h6>
+            <textarea id="journal_input" type="text">
+            </textarea>
+          </div>
+        </div>
+        <diV id='block_two-right'>
+           <div id=milestones>
+              <h6>SOBRIETY</h6>
+              <div id='holder'>
+                <div class='milestone' id='milestone24h'>24h</div>
+                <div class='milestone' id='milestone7d'>7d</div>
+                <div class='milestone' id='milestone1w'>1w</div>
+                <div class='milestone' id='milestone1m'>1m</div>
+                <div class='milestone' id='milestone2m'>2m</div>
+                <div class='milestone' id='milestone3m'>3m</div>
+                <div class='milestone' id='milestone4m'>4m</div>
+              </div>
+            </div>
+        </div>  
       </div>  
     </div>
   </body>
