--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
         <diV id='block_two-left'>
           <div id=daily_journal>
             <h6>DAILY ENTRY</h6>
-            <textarea id="journal_input" type="text">
-            </textarea>
+            <textarea id="journal_input" type="text" placeholder="Gratitude does the soul well"></textarea>
           </div>
         </div>
         <diV id='block_two-right'>
@@ -56,7 +55,8 @@
                 <div class='milestone' id='milestone4m'>4m</div>
               </div>
             </div>
-        </div>  
+          <div id='hh'></div>
+        </.div>  
       </div>  
     </div>
   </body>
