--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
                 <div class='milestone' id='milestone2m'>2m</div>
                 <div class='milestone' id='milestone3m'>3m</div>
                 <div class='milestone' id='milestone6m'>6m</div>
+                <div class='milestone' id='milestone9m'>9m</div>
+                <div class='milestone' id='milestone1y'>1y</div>
               </div>
             </div>
           <div id='hh'></div>
