--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         <diV id='block_two-right'>
            <div id=milestones>
-              <h6>SOBRIETY</h6>
+              <h6>SOBRIETY  (1/11/25) </h6>
               <div id='holder'>
                 <div class='milestone' id='milestone24h'>24h</div>
                 <div class='milestone' id='milestone7d'>7d</div>
@@ -57,7 +57,11 @@
                 <div class='milestone' id='milestone1y'>1y</div>
               </div>
             </div>
-          <div id='hh'></div>
+          <div id='date'>
+            <h3 id='month'></h3>
+            <h3 id='day'></h3>
+            <h3 id='year'></h3>
+          </div>
         </.div>  
       </div>  
     </div>
