--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="index.js"></script>
     <div id="main_UI"> 
       <diV id='top_nav'> 
-        <h2 id="greeting"> Good Morning William! </h1>  
+        <h2 id="greeting"> Good Morning, William! </h1>  
       </div>
       <diV id='block_one'>
         <div id='block_one-left'> 
