--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="index.js"></script>
     <div id="main_UI"> 
       <diV id='top_nav'> 
-        <h2 id="greeting"> Good Morning, William! </h1>  
+        <h2 id="greeting"> Good Morning William! </h1>  
       </div>
       <diV id='block_one'>
         <div id='block_one-left'> 
@@ -62,8 +62,11 @@
             <h3 id='day'></h3>
             <h3 id='year'></h3>
           </div>
-        </.div>  
+        </div>  
       </div>  
+      <div id='block_three'>
+        
+      </div>
     </div>
   </body>
 </html>
