--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           <li class="mb"><input class="me" type="checkbox"> Brush PM </li>
           <li class="mb"><input class="me" type="checkbox"> Mnx. </li>
           <li class="mb"><input class="me" type="checkbox"> Vitamins (PM) </li>
+          <li class="mb"><input class="me" type="checkbox"> Creatine (PM) </li>
         </div>
       </div>
       <div id='block_two'>
