--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="index.js"></script>
     <div id="main_UI"> 
       <diV id='top_nav'> 
+        <div id=top_title>Habify </div>
         <h2 id="greeting"> Good Morning William! </h1>  
       </div>
       <diV id='block_one'>
@@ -22,7 +23,7 @@
         </div>
         <div id='block_one-right'> 
         <ul class="daily_list">   
-          <li class="mb"><input class="me" type="checkbox"> Brush AM </li>
+          <li class="mb"><input id='habit_1' class="me" type="checkbox"> Brush AM </li>
           <li class="mb"><input class="me" type="checkbox"> Prayer and VOD </li>
           <li class="mb"><input class="me" type="checkbox"> Water + Creatine </li>
           <li class="mb"><input class="me" type="checkbox"> Vitamins (AM) </li>  
