--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <li class="mb"><input class="me" type="checkbox"> Vitamins (AM) </li>  
           <li class="mb"><input class="me" type="checkbox"> 175g protein </li>
           <li class="mb"><input class="me" type="checkbox"> Beard Oil </li>
-          <li class="mb"><input class="me" type="checkbox"> Gym + Sauna </li>
+          <li class="mb"><input class="me" type="checkbox"> Gym / Home Workout  </li>
           <li class="mb"><input class="me" type="checkbox"> Invest 5$ </li>
           <li class="mb"><input class="me" type="checkbox"> Brush PM </li>
           <li class="mb"><input class="me" type="checkbox"> Mnx. </li>
