--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
         </div>  
       </div>  
       <div id='block_three'>
-        <h3 id='dailyStreak'> You are on a <span id='dailyStreakValue'> 0 </span> day streak </h3>
-        <div id ='dailyStreakAdd' onClick=addStreak()> + day </div> 
-        <div id ='dailyStreakAdd' onClick=clearStreak()> - day </div> 
-        <div id ='dailyStreakAdd' onClick=clearStreak()> clear streak </div> 
+        <h3 id='dailyStreak'> You are on a <span id='dailyStreakOutput'> 0 </span> day streak </h3>
+        <div id ='dailyStreakAdd' onClick=addDay()> + day </div> 
+        <div id ='dailyStreakSubtract' onClick=subtractDay()> - day </div> 
+        <div id ='dailyStreakClear' onClick=clearStreak()> clear streak </div> 
       </div>
     </div>
   </body>
