--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
               </div>
             </div>
           <div id='date'>
-            <h3 id='month'></h3>
-            <h3 id='day'></h3>
-            <h3 id='year'></h3>
+            <h3 class='dateDigits' id='month'></h3>
+            <h3 class='dateDigits' id='day'></h3>
+            <h3 class='dateDigits' id='year'></h3>
           </div>
         </div>  
       </div>  
